@@ -74,15 +74,19 @@ kubectl -n conduktor \
         --from-file=kafka.truststore.jks=./certs/kafka.truststore.jks \
         --from-file=kafka.keystore.jks=./certs/kafka.keystore.jks
 
+# Use gateway.keystore.jks since that has the cert for Gateway.
+# Use kafka.truststore.jks since that is the one that trusts the Kafka cert.
 kubectl -n conduktor \
     create secret generic gateway-cert \
-        --from-file=keystore.jks=./certs/gateway.keystore.jks
+        --from-file=keystore.jks=./certs/gateway.keystore.jks \
+        --from-file=truststore.jks=./certs/kafka.truststore.jks
 
 kubectl -n conduktor \
     create secret generic gateway-env-vars \
-        --from-literal=KAFKA_SASL_JAAS_CONFIG="org.apache.kafka.common.security.plain.PlainLoginModule required username=\"admin\" password=\"admin-secret\";" \
+        --from-literal=KAFKA_SASL_JAAS_CONFIG='org.apache.kafka.common.security.plain.PlainLoginModule required username="admin" password="admin-secret";' \
         --from-literal=GATEWAY_SSL_KEY_STORE_PASSWORD=conduktor \
-        --from-literal=GATEWAY_SSL_KEY_PASSWORD=conduktor
+        --from-literal=GATEWAY_SSL_KEY_PASSWORD=conduktor \
+        --from-literal=GATEWAY_SSL_TRUST_STORE_PASSWORD=conduktor
 ```
 
 ## Deploy Helm Charts
@@ -91,7 +95,7 @@ kubectl -n conduktor \
 helm install \
     -f ./helm/kafka-values.yml \
     -n conduktor \
-    kafka oci://registry-1.docker.io/bitnamicharts/kafka
+    franz oci://registry-1.docker.io/bitnamicharts/kafka
 ```
 
 
@@ -105,4 +109,10 @@ helm install \
     -f ./helm/gateway-values.yml \
     -n conduktor \
     gateway conduktor/conduktor-gateway
+```
+
+
+For some reason, Java clients need to run with this env var set:
+```
+export KAFKA_OPTS="-Djava.security.manager=allow"
 ```
